@@ -45,6 +45,10 @@
 #include <QMouseEvent>
 #include <QWheelEvent>
 
+// Uncomment this #define to have header labels an images centered. Thsi is disabled, as the image
+// centering only works if there is some text larger than 1 line to be displayed underneath :-(
+//#define CONTEXT_CENTERED
+
 static QString headerTag;
 QString View::subTag;
 
@@ -54,7 +58,11 @@ QString View::encode(const QImage &img)
     QBuffer buffer(&bytes);
     buffer.open(QIODevice::WriteOnly);
     img.save(&buffer, "PNG");
+    #ifdef CONTEXT_CENTERED
     return QString("<tr><td align=\"center\"><img src=\"data:image/png;base64,%1\"/></td></tr>").arg(QString(buffer.data().toBase64()));
+    #else
+    return QString("<img src=\"data:image/png;base64,%1\"/>").arg(QString(buffer.data().toBase64()));
+    #endif
 }
 
 void View::initHeaderTags()
@@ -223,7 +231,11 @@ void View::clear()
 
 void View::setHeader(const QString &str)
 {
+    #ifdef CONTEXT_CENTERED
     header->setText("<"+headerTag+" align=\"center\">"+str+"</"+headerTag+">");
+    #else
+    header->setText("<"+headerTag+">"+str+"</"+headerTag+">");
+    #endif
 }
 
 void View::setPicSize(const QSize &sz)
@@ -241,7 +253,11 @@ QSize View::picSize() const
 QString View::createPicTag(const QImage &img, const QString &file)
 {
     if (!file.isEmpty() && QFile::exists(file)) {
+        #ifdef CONTEXT_CENTERED
         return QString("<tr><td align=\"center\"><img src=\"%1\"/></td></tr>").arg(file);
+        #else
+        return QString("<img src=\"%1\"/>").arg(file);
+        #endif
     }
     if (img.isNull()) {
         return QString();
